--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="description" content="A full-stack (MEAN) developer, passionate programmer, problem solver, algorithm lover, trader & a inverstor "/>
 		<meta name="keywords" content="developer, passionate programmer, problem solver, algorithm lover, trader, inverstor, newbie in machine learning"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A" />
-		<meta property="og:image" content="site.jpg"/>
+		<meta property="og:image" content="site.jpeg"/>
 	</head>
 	<body class="container">
 		<div class="row">
