--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="description" content="A full-stack (MEAN) developer, passionate programmer, problem solver, algorithm lover, trader & a inverstor "/>
 		<meta name="keywords" content="developer, passionate programmer, problem solver, algorithm lover, trader, inverstor, newbie in machine learning"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A" />
-		<meta property="og:image" content="http://sachinkalsi.me/site.jpeg"/>
+		<meta property="og:image" content="https://sachinkalsi.github.io/site.jpeg"/>
 	</head>
 	<body class="container">
 		<div class="row">
@@ -49,7 +49,7 @@
 				<a href="https://plus.google.com/u/1/+Sachinkalsi02" "><span class="fa-3x fa fa-google"></span> Google+</a>
 			</li>
 			<li> 
-				<a target="_blank" href="http://sachinkalsi.me/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
+				<a target="_blank" href="https://sachinkalsi.github.io/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
 			</li>
 			<li> 
 				<a href="mailto:sachinkalsi15@gmail.com"> <span class="fa-3x fa fa-at"></span> Email</a>
