--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			-->
 		</div>
 		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;" >
-		"There are many people who complains about the problems. But there are only a few people who go & solve those problems. I want to join those elite group of
+		"There are many people who complains about the problems. But there are only few people who go & solve those problems. I want to join those elite group of
 		people who solves the problem.....Just waiting for the right opportunity."
 		</div>
 		<footer>
