--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A"/>
-		<meta name="description" content="A full-stack (MEAN) developer, passionate programmer, problem solver, algorithm lover, trader & a inverstor "/>
-		<meta name="keywords" content="developer, passionate programmer, problem solver, algorithm lover, trader, inverstor, newbie in machine learning"/>
+		<meta name="description" content="A MEAN developer, passionate programmer, algorithm lover, Machine Learning Enthusiastic,  "/>
+		<meta name="keywords" content="coder, developer, passionate programmer, problem solver, algorithm lover, Artificial Intelligence, inverstor,machine learning"/>
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
 		<meta property="og:image" content="https://sachinkalsi.github.io/site.jpeg"/>
 	</head>
@@ -40,7 +40,7 @@
 		<footer>
 		  <ul class="list-inline text-center">
 			<li>
-				<a target="_blank" href="https://www.linkedin.com/in/sachin-kalsi-1781b842/"><span class="fa-3x fa fa-linkedin"></span> Linkedin</a>
+				<a target="_blank" href="https://www.linkedin.com/in/sachinkalsi"><span class="fa-3x fa fa-linkedin"></span> Linkedin</a>
 			</li>
 			<li>
 				<a target="_blank" href="https://github.com/SachinKalsi/"><span class="fa-3x fa fa-github"></span> GitHub</a>
