--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 				<a target="_blank" href="https://sachinkalsi.github.io/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
 			</li>
 			<li>
+				<a target="_blank" href="https://stackoverflow.com/users/story/4467291"> <span class="fab fa-stack-overflow">></span> Stackoverflow</a>
+				
+			</li> 
+			<li>
 				<a href="https://plus.google.com/u/1/+Sachinkalsi02" "><span class="fa-3x fa fa-google"></span> Google+</a>
 			</li>
 			<li> 
