--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<a target="_blank" href="https://sachinkalsi.github.io/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
 			</li>
 			<li>
-				<a target="_blank" href="https://stackoverflow.com/users/story/4467291"> <span class="fab fa-stack-overflow">></span> Stackoverflow</a>
+				<a target="_blank" href="https://stackoverflow.com/users/story/4467291"> <span class="fa-3x fa-stack-overflow">></span> Stackoverflow</a>
 				
 			</li> 
 			<li>
