--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<title>
-		Sachin Kalsi, a passionate programmer
+		Sachin Kalsi, passionate programmer
 		</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A"/>
-		<meta name="description" content="A MEAN developer, passionate programmer, algorithm lover, Machine Learning Enthusiastic,  "/>
+		<meta name="description" content="passionate programmer, Machine Learning Enthusiastic, algorithm lover, MEAN Stack developer "/>
 		<meta name="keywords" content="coder, developer, passionate programmer, problem solver, algorithm lover, Artificial Intelligence, inverstor,machine learning"/>
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
 		<meta property="og:image" content="https://sachinkalsi.github.io/site.jpeg"/>
