added resume url

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
+			  <li>
+				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin%20Kalsi,%20ML.pdf"><span class="fa-3x fa fa-file"></span> Resume</a>
+			  </li>
 			<li>
 				<a target="_blank" href="https://www.linkedin.com/in/sachinkalsi"><span class="fa-3x fa fa-linkedin"></span> Linkedin</a>
 			</li>
