--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<meta name="description" content="passionate programmer, Machine Learning Enthusiastic, algorithm lover, MEAN Stack developer "/>
 		<meta name="keywords" content="coder, developer, passionate programmer, problem solver, algorithm lover, Artificial Intelligence, inverstor,machine learning"/>
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
+		<meta property="og:title" content="Sachin Kalsi, passionate programmer"/>
+		<meta property="og:description" content="I write blogs on Machine Learning & Algorithms "/>
 		<meta property="og:image" content="https://sachinkalsi.github.io/site.jpeg"/>
 	</head>
 	<body class="container">
