--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
 		<meta property="og:title" content="Sachin Kalsi, passionate programmer"/>
 		<meta property="og:description" content="I write blogs on Machine Learning & Algorithms "/>
-		<meta property="og:image" content="https://sachinkalsi.github.io/site.jpeg"/>
+		<meta property="og:image" content="https://sachinkalsi.github.io/me.jpeg"/>
 	</head>
 	<body class="container">
 		<div class="row">
