--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 		<footer>
 		  <ul class="list-inline text-center">
 			  <li>
-				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin%20Kalsi,%20ML.pdf"><span class="fa-3x fa fa-file"></span> Resume</a>
+				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin%20Kalsi,%20ML.pdf"><span class="fa-3x fa fa-file"></span>Mini Resume</a>
 			  </li>
+			<li>
+				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin_Kalsi_ML.pdf"><span class="fa-3x fa fa-file"></span>Big Resume</a>
+			</li>
 			<li>
 				<a target="_blank" href="https://www.linkedin.com/in/sachinkalsi"><span class="fa-3x fa fa-linkedin"></span> Linkedin</a>
 			</li>
