--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 				<a href="mailto:sachinkalsi15@gmail.com"> <span class="fa-3x fa fa-at"></span> Email</a>
 			</li>
 		  </ul>
-		</footer>	
+		</footer>										      
+		<a href="https://smallseotools.com/visitor-hit-counter/" target="_blank" title="Web Counter">
+			<img src="https://smallseotools.com/counterDisplay?code=0bfc687eac76bc628ab3c2b2c2249662&style=0015&pad=5&type=page&initCount="  title="Web Counter" Alt="Web Counter" border="0">
+		</a>
 	</body>
 	
   <style>
