--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</li>
 		  </ul>
 		</footer>
-		<div align='center>
+		<div align='center'>
 			<a href="https://smallseotools.com/visitor-hit-counter/" target="_blank" title="Web Counter">
 				<img src="https://smallseotools.com/counterDisplay?code=0bfc687eac76bc628ab3c2b2c2249662&style=0010&pad=5&type=page&initCount="  title="Web Counter" Alt="Web Counter" border="0">
 			</a>
