--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 				<img src="https://smallseotools.com/counterDisplay?code=0bfc687eac76bc628ab3c2b2c2249662&style=0010&pad=5&type=page&initCount="  title="Web Counter" Alt="Web Counter" border="0">
 			</a>
 		</div>
+		<br>
+		<div align='center'>
+			<h5><a href="https://sachinkalsi.github.io/magic_number/magic.html"> MAGIC SQUARE </a></h5>
+		</div>
 		
 	</body>
 	
