--- a/magic_number/magic.html
+++ b/magic_number/magic.html
@@ -19,13 +19,15 @@
   <script>
   function generateSquare(){
     bDate = document.getElementById('bdate').value
-    if(bDate.length){
-      bDate = bDate.split('-')
-      cc = parseInt(bDate[0].substring(0, 2))
-      yy = parseInt(bDate[0].substring(2, 4))
-      mm = parseInt(bDate[1])
-      dd = parseInt(bDate[2])
+    if(bDate.length == 0){
+      alert("Please enter your birth date")
+      return
     }
+    bDate = bDate.split('-')
+    cc = parseInt(bDate[0].substring(0, 2))
+    yy = parseInt(bDate[0].substring(2, 4))
+    mm = parseInt(bDate[1])
+    dd = parseInt(bDate[2])
     ids = ["dd", "mm", "cc", "yy", "yy+1", "cc-1", "mm-3", "dd+3", "mm-2", "dd+2", "yy+2", "cc-2", "cc+1", "yy-1", "dd+1", "mm-1"]
     values = [dd, mm, cc, yy, yy+1, cc-1, mm-3, dd+3, mm-2, dd+2, yy+2, cc-2, cc+1, yy-1, dd+1, mm-1]
     for(i=0;i<ids.length;i++){
