--- a/index.html
+++ b/index.html
@@ -25,15 +25,67 @@
 				<h1> Sachin Kalsi </h1>
 				<h5>Passionate Programmer <span class="blinking-cursor">_</span></h5>
 			</div>
-			<!--
-			<div>
-				<ul class="list-inline" style="margin-top: 30px;">
-					<li class="list-inline-item">
-						<a target="_blank" href="https://github.com/SachinKalsi/"> <h3>let_my_code_speak</h3></a>
-					</li>
-				</ul>
+			<div class="col-md-6" style="top: 30px;left: 25%;">
+			  <button type="button" style="background-color: rebeccapurple" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">What I do on weekends</button>
+
+			  <!-- Modal -->
+			  <div class="modal fade" id="myModal" role="dialog">
+			    <div class="modal-dialog">
+			    
+			      <!-- Modal content-->
+			      <div class="modal-content">
+			        <div class="modal-header">
+			          <button type="button" class="close" data-dismiss="modal">&times;</button>
+			          <h4 class="modal-title">Things I do on Holidays/Weekends (most of the time)</h4>
+			        </div>
+			        <div class="modal-body">
+						<ul>
+							<li>
+								Built a small <a href="https://trek-with-heera.herokuapp.com/" target="_blank">website</a> for our Trek leader. I am happy know that it is solving some problems for him.
+							</li>
+							<li>
+								Built Google Chrome extensions to generate training dataset for the ML/DL models.
+							</li>
+							<li>
+								Unofficially involved in automation of "COVID-19 test reports" updation through tech (Python)
+							</li>
+							<li>
+								Many failure projects/startup ideas
+								<ul>
+									<li> 
+										Built <a href="https://video-upload-and-stream.herokuapp.com/" target="_blank">anonymous video upload platform</a> to eliminate corruption in India. (Perfect example of expectation vs reality ;) )
+									</li>
+									<li>
+										Built web app to apply "some formulas" in Trading. This would notify BUY/SELL signals through SMS on LIVE Markets
+									</li>
+									<li>
+										A lots of small ideas which got failed at the initial stage. We can talk when we meet ;)
+									</li>
+								</ul>
+							</li>
+							<li> 
+								Currently learning Hydroponics - soil less farming. A DIY project is in progress
+							</li>
+							<li>
+								Auto - Generate person names from Ramayana/Mahabharat names. Currently working on gathering the names through NER. This is similar to what Andrej Karpathy did :)
+							</li>
+							<li>
+								-------
+							</li>
+							<li>
+								Some Netflix/Prime series or movies
+							</li>
+						</ul>
+			        </div>
+			        <div class="modal-footer">
+			          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			        </div>
+			      </div>
+			      
+			    </div>
+			  </div>
 			</div>
-			-->
+			
 		</div>
 		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;" >
 		"There are many people who complain about the problems. But there are only few people who go & solve those problems. I want to join those elite group of
