--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 									</li>
 								</ul>
 							</li>
+							<li>
+								Automate boring stuff
+							</li>
 							<li> 
 								Currently learning Hydroponics - soil less farming. A DIY project is in progress
 							</li>
