--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			
 		</div>
 		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;" >
-		"There are many people who complain about the problems. But there are only few people who go & solve those problems. I want to join those elite group of
-		people who solves the problem.....Just waiting for the right opportunity."
+		"There are many people who complain about problems. But there are only a few people who go & solve those problems. 
+		I want to join those elite group of people who solves the problem.....Just waiting for the right opportunity"
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
