--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A"/>
-		<meta name="description" content="passionate programmer, Machine Learning Enthusiastic, algorithm lover, MEAN Stack developer "/>
-		<meta name="keywords" content="coder, developer, passionate programmer, problem solver, algorithm lover, Artificial Intelligence, inverstor,machine learning"/>
+		<meta name="description" content="Passionate programmer, Problem Solver, Machine Learning Engineer, Algorithm lover"/>
+		<meta name="keywords" content="coder, developer, passionate programmer, problem solver, algorithm lover, machine learning"/>
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
 		<meta property="og:title" content="Sachin Kalsi, passionate programmer"/>
-		<meta property="og:description" content="I write blogs on Machine Learning & Algorithms "/>
+		<meta property="og:description" content="I love solving problems through tech"/>
 		<meta property="og:image" content="https://sachinkalsi.github.io/me.jpeg"/>
 	</head>
 	<body class="container">
