--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin%20Kalsi,%20ML.pdf"><span class="fa-3x fa fa-file"></span>Mini Resume</a>
 			  </li> -->
 			<li>
-				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin%20Kalsi.pdf"><span class="fa-3x fa fa-file"></span>Resume</a>
+				  <a target="_blank" href="https://sachinkalsi.github.io/resume/Sachin%20Kalsi_.pdf"><span class="fa-3x fa fa-file"></span>Resume</a>
 			</li>
 			<li>
 				<a target="_blank" href="https://www.linkedin.com/in/sachinkalsi"><span class="fa-3x fa fa-linkedin"></span> Linkedin</a>
