--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
 			        <div class="modal-body">
 						<ul>
 							<li>
-								Built a small <a href="https://trek-with-heera.herokuapp.com/" target="_blank">website</a> for our Trek leader. I am happy know that it is solving some problems for him.
+								Read & annotate <a href="https://github.com/SachinKalsi/annotated-research-papers" target="_blank"> reseach papers </a>. Yet to add many papers
 							</li>
 							<li>
-								Built Google Chrome extensions to generate training dataset for the ML/DL models.
+								Built a small <a href="https://trek-with-heera.herokuapp.com/" target="_blank">website</a> for our Trek leader. I am happy know that he is getting multiple calls through this website
+							</li>
+							<li>
+								Built <a href="https://github.com/SachinKalsi/html_tag_annotator" target="_blank"> Google Chrome extensions </a> to generate training dataset for the ML/DL models. (Satisfying project)
+							</li>
+							<li>
+								Started <a href="https://www.youtube.com/channel/UClGXmKQicpqHk_eYQk03sTQ" target="_blank" >YouTube channel </a> - not being consistant 😔
 							</li>
 							<li>
 								Unofficially involved in automation of "COVID-19 test reports" updation through tech (Python)
@@ -56,7 +62,7 @@
 										Built <a href="https://video-upload-and-stream.herokuapp.com/" target="_blank">anonymous video upload platform</a> to eliminate corruption in India. (Perfect example of expectation vs reality ;) )
 									</li>
 									<li>
-										Built web app to apply "some formulas" in Trading. This would notify BUY/SELL signals through SMS on LIVE Markets
+										Built web app to notify BUY/SELL signals through SMS on LIVE Markets (yes, you are right. Its silly )
 									</li>
 									<li>
 										A lots of small ideas which got failed at the initial stage. We can talk when we meet ;)
@@ -64,16 +70,10 @@
 								</ul>
 							</li>
 							<li>
-								Automate boring stuff
-							</li>
-							<li> 
-								Currently learning Hydroponics - soil less farming. A DIY project is in progress
+								Automate boring stuff (YouTube live comments clusters, )
 							</li>
 							<li>
 								-------
-							</li>
-							<li>
-								Some Netflix/Prime series or movies
 							</li>
 						</ul>
 			        </div>
