--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<title>
-		Sachin Kalsi, passionate programmer
+		Sachin Kalsi, problem solver
 		</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -23,7 +23,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h1> Sachin Kalsi </h1>
-				<h5>Passionate Programmer <span class="blinking-cursor">_</span></h5>
+				<h5>Problem Solver <span class="blinking-cursor">_</span></h5>
 			</div>
 			<div class="col-md-6" style="top: 30px;left: 25%;">
 			  <button type="button" style="background-color: rebeccapurple" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">What I do on weekends</button>
