--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<title>
-		Sachin Kalsi, problem solver
+		Sachin Kalsi, Problem Solver
 		</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -34,9 +34,9 @@
 			    
 			      <!-- Modal content-->
 			      <div class="modal-content">
-			        <div class="modal-header">
+			        <div class="modal-header" style="display:none">
 			          <button type="button" class="close" data-dismiss="modal">&times;</button>
-			          <h4 class="modal-title">Things I do on Holidays/Weekends (most of the time)</h4>
+			          <h4 class="modal-title" >Things I do on Holidays/Weekends (most of the time)</h4>
 			        </div>
 			        <div class="modal-body">
 						<ul>
@@ -50,7 +50,7 @@
 								Built <a href="https://github.com/SachinKalsi/html_tag_annotator" target="_blank"> Google Chrome extensions </a> to generate training dataset for the ML/DL models. (Satisfying project)
 							</li>
 							<li>
-								Started <a href="https://www.youtube.com/channel/UClGXmKQicpqHk_eYQk03sTQ" target="_blank" >YouTube channel </a> - not being consistant 😔
+								Started <a href="https://www.youtube.com/@ml-simplified/" target="_blank" >YouTube channel </a>
 							</li>
 							<li>
 								Unofficially involved in automation of "COVID-19 test reports" updation through tech (Python)
@@ -88,8 +88,9 @@
 			
 		</div>
 		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;" >
-		"There are many people who complain about problems. But there are only a few people who go & solve those problems. 
-		I want to join those elite group of people who solves the problem.....Just waiting for the right opportunity"
+		Currently working as a lead data scientist with a passion for solving complex problems and a track record of innovative solutions.
+		With several years of experience in the field, I enjoy collaborating with others and taking on new challenges. 
+		I'm driven by the opportunity to make a real impact and stay at the forefront of technological advancements.
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
@@ -104,6 +105,9 @@
 			</li>
 			<li>
 				<a target="_blank" href="https://github.com/SachinKalsi/"><span class="fa-3x fa fa-github"></span> GitHub</a>
+			</li>
+			<li>
+				 <a target="_blank" href="https://www.youtube.com/@ml-simplified/"  class="fa-3x fa fa-youtube">YouTube </a>
 			</li>
 			<li> 
 				<a target="_blank" href="https://sachinkalsi.github.io/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
