--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h1> Sachin Kalsi </h1>
 				<h5>Problem Solver <span class="blinking-cursor">_</span></h5>
 			</div>
-			<div class="col-md-6" style="top: 30px;left: 25%;">
+			<div class="col-md-6" style="top: 30px;left: 25%; display:none">
 			  <button type="button" style="background-color: rebeccapurple" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">What I do on weekends</button>
 
 			  <!-- Modal -->
@@ -34,7 +34,7 @@
 			    
 			      <!-- Modal content-->
 			      <div class="modal-content">
-			        <div class="modal-header" style="display:none">
+			        <div class="modal-header">
 			          <button type="button" class="close" data-dismiss="modal">&times;</button>
 			          <h4 class="modal-title" >Things I do on Holidays/Weekends (most of the time)</h4>
 			        </div>
@@ -107,7 +107,7 @@
 				<a target="_blank" href="https://github.com/SachinKalsi/"><span class="fa-3x fa fa-github"></span> GitHub</a>
 			</li>
 			<li>
-				 <a target="_blank" href="https://www.youtube.com/@ml-simplified/"  class="fa-3x fa fa-youtube">YouTube </a>
+				 <a target="_blank" href="https://www.youtube.com/@ml-simplified/"><span class="fa-3x fa fa-linkedin"></span> YouTube </a>
 			</li>
 			<li> 
 				<a target="_blank" href="https://sachinkalsi.github.io/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
