--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<a target="_blank" href="https://github.com/SachinKalsi/"><span class="fa-3x fa fa-github"></span> GitHub</a>
 			</li>
 			<li>
-				 <a target="_blank" href="https://www.youtube.com/@ml-simplified/"><span class="fa-3x fa fa-linkedin"></span> YouTube </a>
+				 <a target="_blank" href="https://www.youtube.com/@ml-simplified/"><span class="fa-3x fa fa-youtube"></span> YouTube </a>
 			</li>
 			<li> 
 				<a target="_blank" href="https://sachinkalsi.github.io/blog/"> <span class="fa-3x fa fa-rss"></span> Blog</a>
