--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
 			
 		</div>
 		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;" >
-		Currently working as a lead data scientist with a passion for solving complex problems and a track record of innovative solutions.
-		With several years of experience in the field, I enjoy collaborating with others and taking on new challenges. 
-		I'm driven by the opportunity to make a real impact and stay at the forefront of technological advancements.
+		Currently working as a <i>lead data scientist</i> with a passion for solving complex problems and a track record of innovative solutions.
+		With several years of experience in the field, I enjoy collaborating with others and taking on new challenges.<br>
+			<hr>
+			If you're facing a challenging NLP problem, don't hesitate to reach out to me via email. I'm always here to help find innovative solutions that meet your needs.
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
