--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 			</div>
 			
 		</div>
-		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 38px;" >
-		Currently working as a <i>lead data scientist</i> with a passion for solving complex problems and a track record of innovative solutions.
+		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 30px;" >
+		Currently working as a <span style="font-weight: bold"> Lead data scientist </span> with a passion for solving complex problems and a track record of innovative solutions.
 		With several years of experience in the field, I enjoy collaborating with others and taking on new challenges.<br>
 			<hr>
 			If you're facing a challenging NLP problem, don't hesitate to reach out to me via email. I'm always here to help find innovative solutions that meet your needs.
