--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
 			
 		</div>
 		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 30px;" >
-		Currently working as a <span style="font-weight: bold"> Lead data scientist </span> with a passion for solving complex problems and a track record of innovative solutions.
-		With several years of experience in the field, I enjoy collaborating with others and taking on new challenges.<br>
+			I work as a Data Science Architect and love solving tough & challenging industrial problems with creative, scalable solutions. I've got years of experience and enjoy working together on new challenges. 
 			<hr>
-			If you're facing a challenging NLP problem, don't hesitate to reach out to me via email. I'm always here to help find innovative solutions that meet your needs.
+			If you have a tricky NLP problem, just shoot me an email. I'm here to help find smart solutions that fit your needs.
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
