--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
 			</div>
 			
 		</div>
-		<div style="margin:6%;font-family: 'Kavivanar', serif; font-size: 30px;" >
-			I work as a Data Science Architect and love solving tough & challenging industrial problems with creative, scalable solutions. I've got years of experience and enjoy working together on new challenges. 
+		<div style="margin:6%; font-size: 30px;" >
+			I lead the Data Science team at Draup, focusing on practical scalable solutions in NLP, Machine Learning, and Deep Learning. My work includes building effective tools for semantic search, information retrieval, building RAG applications, etc. 
+			I specialise in transformers, building LLMs, text clustering, and extracting information from text.
 			<hr>
-			If you have a tricky NLP problem, just shoot me an email. I'm here to help find smart solutions that fit your needs.
+			Beyond development, I’m passionate about mentoring, assisting with hiring and sharing insights through YouTube, blogs, and GitHub.
 		</div>
 		<footer>
 		  <ul class="list-inline text-center">
