--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A"/>
-		<meta name="description" content="Passionate programmer, Problem Solver, Machine Learning Engineer, Data Scientist"/>
-		<meta name="keywords" content="coder, developer, passionate programmer, problem solver, algorithm lover, machine learning, data science"/>
+		<meta name="description" content="Problem Solver, NLP Engineer, Data Scientist"/>
+		<meta name="keywords" content="transformers, nlp, algorithms, machine learning, data science, large language models, generative AI, artificial intelligence"/>
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
 		<meta property="og:title" content="Sachin Kalsi, problem solver"/>
-		<meta property="og:description" content="I love solving problems through tech"/>
+		<meta property="og:description" content="I love solving problems"/>
 		<meta property="og:image" content="https://sachinkalsi.github.io/me.jpeg"/>
 	</head>
 	<body class="container">
@@ -25,67 +25,6 @@
 				<h1> Sachin Kalsi </h1>
 				<h5>Problem Solver <span class="blinking-cursor">_</span></h5>
 			</div>
-			<div class="col-md-6" style="top: 30px;left: 25%; display:none">
-			  <button type="button" style="background-color: rebeccapurple" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">What I do on weekends</button>
-
-			  <!-- Modal -->
-			  <div class="modal fade" id="myModal" role="dialog">
-			    <div class="modal-dialog">
-			    
-			      <!-- Modal content-->
-			      <div class="modal-content">
-			        <div class="modal-header">
-			          <button type="button" class="close" data-dismiss="modal">&times;</button>
-			          <h4 class="modal-title" >Things I do on Holidays/Weekends (most of the time)</h4>
-			        </div>
-			        <div class="modal-body">
-						<ul>
-							<li>
-								Read & annotate <a href="https://github.com/SachinKalsi/annotated-research-papers" target="_blank"> reseach papers </a>. Yet to add many papers
-							</li>
-							<li>
-								Built a small <a href="https://trek-with-heera.herokuapp.com/" target="_blank">website</a> for our Trek leader. I am happy know that he is getting multiple calls through this website
-							</li>
-							<li>
-								Built <a href="https://github.com/SachinKalsi/html_tag_annotator" target="_blank"> Google Chrome extensions </a> to generate training dataset for the ML/DL models. (Satisfying project)
-							</li>
-							<li>
-								Started <a href="https://www.youtube.com/@ml-simplified/" target="_blank" >YouTube channel </a>
-							</li>
-							<li>
-								Unofficially involved in automation of "COVID-19 test reports" updation through tech (Python)
-							</li>
-							<li>
-								Many failure projects/startup ideas
-								<ul>
-									<li> 
-										Built <a href="https://video-upload-and-stream.herokuapp.com/" target="_blank">anonymous video upload platform</a> to eliminate corruption in India. (Perfect example of expectation vs reality ;) )
-									</li>
-									<li>
-										Built web app to notify BUY/SELL signals through SMS on LIVE Markets (yes, you are right. Its silly )
-									</li>
-									<li>
-										A lots of small ideas which got failed at the initial stage. We can talk when we meet ;)
-									</li>
-								</ul>
-							</li>
-							<li>
-								Automate boring stuff (YouTube live comments clusters, )
-							</li>
-							<li>
-								-------
-							</li>
-						</ul>
-			        </div>
-			        <div class="modal-footer">
-			          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			        </div>
-			      </div>
-			      
-			    </div>
-			  </div>
-			</div>
-			
 		</div>
 		<div style="margin:6%; font-size: 30px;" >
 			I lead the Data Science team at Draup, focusing on practical scalable solutions in NLP, Machine Learning, and Deep Learning. My work includes building effective tools for semantic search, information retrieval, building RAG applications, etc. 
