--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="google-site-verification" content="Kkv_GseXpgmWoM1XhKHl1xiRFtc0Y2WLaNwVXjURA0A"/>
 		<meta name="description" content="Problem Solver, NLP Engineer, Data Scientist"/>
-		<meta name="keywords" content="transformers, nlp, algorithms, machine learning, data science, large language models, generative AI, artificial intelligence"/>
+		<meta name="keywords" content="transformers, nlp, algorithms, machine learning, data science, large language models, generative AI, Artificial Intelligence, AI"/>
 		<meta name="google-site-verification" content="ANYus1xXHgOXvgodHSxkPRaQY9o5wz4W8KUUgfF8bFo" />
 		<meta property="og:title" content="Sachin Kalsi, problem solver"/>
 		<meta property="og:description" content="I love solving problems"/>
